--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,12 @@ jobs:
             -   name: Set up Docker Buildx
                 uses: docker/setup-buildx-action@v1
 
+            -   name: Login to DockerHub
+                uses: docker/login-action@v1
+                with:
+                    username: ${{ secrets.DOCKERHUB_USERNAME }}
+                    password: ${{ secrets.DOCKERHUB_TOKEN }}
+
             -   name: Get the version
                 id: get_version
                 run: |
@@ -74,13 +80,6 @@ jobs:
                         --build-arg VCS_REF=${GITHUB_SHA::8} \
                         --tag "${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}-${PATCH_VERSION}" .
 
-            -   name: Login to DockerHub
-                if: success()
-                uses: docker/login-action@v1
-                with:
-                    username: ${{ secrets.DOCKERHUB_USERNAME }}
-                    password: ${{ secrets.DOCKERHUB_TOKEN }}
-
             -   name: Build and Push (latest)
                 if: success() && matrix.php_version == 'latest'
                 uses: docker/build-push-action@v2
@@ -88,10 +87,13 @@ jobs:
                     context: .
                     file: ./Dockerfile
                     push: true
-                    tags: docker.io/${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}
+                    tags: ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}
                     build-args: |
                         VERSION=${{ steps.get_version.outputs.prefix }}
                         MINOR_PHP_VERSION=alpine
                         FULL_PHP_VERSION=alpine
                         BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
                         VCS_REF=${GITHUB_SHA::8}
+
+            -   name: Inspect (latest)
+                run: docker image inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}
