--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,6 +135,12 @@ jobs:
             -   name: Checkout
                 uses: actions/checkout@v2
 
+            -   name: Login to DockerHub
+                uses: docker/login-action@v1
+                with:
+                    username: ${{ secrets.DOCKERHUB_USERNAME }}
+                    password: ${{ secrets.DOCKERHUB_TOKEN }}
+
             -   name: Update repo description
                 uses: peter-evans/dockerhub-description@v2
                 with:
